Final rough draft of milestone capstone report

--- a/Capstone Report.Rmd
+++ b/Capstone Report.Rmd
@@ -4,6 +4,7 @@ author: "Ankita Hanmiah"
 date: "February 7, 2019"
 output:
   pdf_document: default
+  word_document: default
   html_document: default
 ---
 
@@ -18,6 +19,7 @@ The original crime data used for this project was collected from Table 4 of the 
 The poverty data (Poverty_State2017 (Original).csv) is compiled by Census using their measures of determining which families fall within the poverty limit. This is measured by using sets of income thresholds that differs based on the size of the family and their composition. The family's total income, before taxes and not including benefits, must be under the determined threshold for the family to be considered in poverty.   
 
 The data collected from the FBI UCR and Census was reorganized into three separate data sets: "FBICrime"(CrimeByState&Offenses.csv), "FBICrime2"(Violent&PropertyCrime.csv), and "CrimePoverty"(Crime&PovertyByState.csv):
+
 ```{r, warning = FALSE, message = FALSE}
 library(tidyverse)
 
@@ -26,19 +28,26 @@ Poverty <- read_csv("Poverty_State2017 (Original).csv")
 
 #With the poverty data, the columns to be used in this project were subset and renamed
 poverty_names <- make.names(c("State", "Poverty Count", "Poverty Rate"))
-Poverty <- Poverty[c("State / County Name", "All Ages in Poverty Count", "All Ages in Poverty Percent")] %>% 
+Poverty <- 
+  Poverty[c("State / County Name", "All Ages in Poverty Count", "All Ages in Poverty Percent")] %>% 
   setNames(poverty_names)
 Poverty$State <- tolower(Poverty$State)
 
-#The unnecessary data, extra rows, and empty columns were removed and the states, population, and crime data for 2017 was isolated
+#The unnecessary data, extra rows, and empty columns were removed
+#The states, population, and crime data for 2017 was isolated
 #Column names and certain state names were adjusted
 FBICrime <- FBICrime %>% 
   fill(Area) %>% 
   filter(Year != "Percent change", Year != "2016", !is.na(Year)) %>% 
-  filter(!(Area %in% c("United States Total5, 6", "Puerto Rico", "Pacific", "Mountain", "West", "West South Central", "East South Central", "South Atlantic5,6", "South5,6", "West North Central", "East North Central", "Midwest", "Middle Atlantic", "Northeast", "New England"))) %>%
+  filter(!(Area %in% c("United States Total5, 6", "Puerto Rico", "Pacific", 
+                       "Mountain", "West", "West South Central", "East South Central", 
+                       "South Atlantic5,6", "South5,6", "West North Central", "East North Central", 
+                       "Midwest", "Middle Atlantic", "Northeast", "New England"))) %>%
   arrange(Area)
 
-column_names <- make.names(c("State", "Population", "Violent Crime", "Murder", "Rape", "Robbery", "Aggravated Assault", "Property Crime", "Burglary", "Larceny", "Motor Vehicle Theft"))
+column_names <- make.names(c("State", "Population", "Violent Crime", "Murder", "Rape", 
+                             "Robbery", "Aggravated Assault", "Property Crime", "Burglary", 
+                             "Larceny", "Motor Vehicle Theft"))
 FBICrime <- FBICrime %>% 
   select(Area, Population2, starts_with("X"), -X22, -X23, -X24) %>% 
   setNames(column_names)
@@ -55,7 +64,8 @@ FBICrime$Population <- gsub(",", "", FBICrime$Population) %>%
   as.numeric(FBICrime$Population)
 FBICrime$State <- tolower(FBICrime$State)
 
-#Filtered Violent Crime and Property Crime into a separate data frame and removed them from the original dataset
+#Filtered violent crime and property crime into a separate data frame
+#Removed violent crime and property crime from the original dataset
 #Spread out the offenses and rates in FBICrime to prepare the data for plotting and statistics
 Violent_Crime <- filter(FBICrime, Offense == c("Violent.Crime"))
 Property_Crime <- filter(FBICrime, Offense == c("Property.Crime"))
@@ -66,7 +76,7 @@ FBICrime <- FBICrime %>%
   spread(Offense, Rate) %>%
   select(-Violent.Crime, -Property.Crime)
 
-#Created a separate dataset containing average total crime rates per state to append to the poverty data
+#Created a separate dataset containing average total crime rates per state 
 #Spread out the offenses and rates in FBICrime2 to prepare the data for plotting and statistics
 AvgStateRate <- FBICrime2 %>% 
   group_by(State) %>% 
@@ -92,19 +102,28 @@ Looking at these data sets, some of the things that can be explored are comparis
 library(fiftystater)
 
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Violent.Crime, map_id = State), map = fifty_states, data = FBICrime2, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Violent.Crime, map_id = State), 
+           map = fifty_states, data = FBICrime2, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Violent Crime by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Violent Crime by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Property.Crime, map_id = State), map = fifty_states, data = FBICrime2, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Property.Crime, map_id = State), 
+           map = fifty_states, data = FBICrime2, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Property Crime by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Property Crime by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
+
 One of the trends that can be seen by looking at these maps is that there is a higher prevalence of property crime throughout the United States as compared to violent crime. While the scale of violent crime rates per 100,000 is from below 250 to over 1000, the scale for property crime rates per 100,000 is from below 2000 to over 4000. 
 
 These maps of generalized violent and property crime show that New Mexico and Alaska seem to have the highest rates of both violent and property crime. It can also be seen by the difference in scale and in the coloring that there are higher rates of property crime than violent and property crime is more highly widespread across the states than violent crime. Property crime seems to be most prevalent in the southern and western states, with the least amount in the northeast and parts of the midwest and mountain region, whereas violent crime is most prevalent in New Mexico, Alaska, and Tennessee, with mid to low rates across the rest of the states. 
@@ -112,36 +131,48 @@ These maps of generalized violent and property crime show that New Mexico and Al
 The following maps depict the distribution of the individual criminal offenses throughout the states. Glancing at the rate scales, it can be seen that larceny seems to have a highest prevalence with rates in the thousands. 
 
 For property crimes:
-```{r, warning = FALSE, message = FALSE}
 
+```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) +
-  geom_map(aes(fill = Burglary, map_id = State), map = fifty_states, data = FBICrime, size = 0.15, color = "grey40") + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) +
+  geom_map(aes(fill = Burglary, map_id = State), 
+           map = fifty_states, data = FBICrime, size = 0.15, color = "grey40") + 
  scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Burglary by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Burglary by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Burglary shows high rates throughout the south, ranging from 500 to over 800 cases per 100,000, with the most highlighted states being New Mexico and Mississippi, followed by states like Oklahoma, Arkansas, and Louisiana. The lowest rates of burglary (ranging from below 200 to 250 per 100,000) seem to be in New York, New Hampshire, and Virginia.
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Larceny, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Larceny, map_id = State), 
+           map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Larceny by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Larceny by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Larceny seems to show highest rates (2500 to 3500 per 100,000) in New Mexico, Louisiana, South Dakota, and Alaska but is fairly widespread throughout the United States and seems to be the most prevalent of the individual criminal offenses reported to the FBI. The lowest rates (below 1500 per 100,000) seem to be found in parts of New England/northeast regions, parts of the midwest (such as Wisconsin and Michigan), and Idaho.
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Motor.Vehicle.Theft, map_id = State), map =fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Motor.Vehicle.Theft, map_id = State), 
+           map =fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Motor Vehicle Theft by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Motor Vehicle Theft by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Motor vehicle theft seems to be most prevalent in New Mexico and Alaska (with rates over 500 per 100,000), followed by the west coast states (Washington, Oregon, California) in the 400 to 500 range, as well as Nevada and Colorado. The lowest rates (below 100) look to be in the New England/northeast states (Maine, New Hampshire, Vermont, New York, and Pennsylvania.
@@ -150,44 +181,60 @@ For violent crimes:
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Aggravated.Assault, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Aggravated.Assault, map_id = State), 
+           map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Aggravated Assault by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Aggravated Assault by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Aggravated assault seems to show its highest rates of over 500 cases per 100,000 in New Mexico, Alaska, and Tennessee, followed by 400 to 500 rates in Arkansas, Louisiana, Missouri, Alabama, South Carolina, and South Dakota. The lowest prevalence (below 100) seems to be in Maine, followed by 100 to 200 per 100,000 rates in New Hampshire, Vermont, Connecticut, New Jersey, Virginia, Kentucky, Ohio, Minnesota, and Utah.
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Murder, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Murder, map_id = State), 
+           map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Murder by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Murder by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Murder seemes to be the least prevalent crime reported to the FBI with the lowest of crime rates at a range of 0 to over 16 cases per 100,000 people, showing mostly mid to low rates (from 0 to 12) throughout the United States. The higher murder rates are found in Louisiana, Nevada, Missouri, and Maryland. The lowest rates below 4 are seen in the New England/northeast region along with Hawaii, and states in the northern midwest and northwest such as Minnesota, North Dakota, Nebraska, Idaho, and Utah. 
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) + 
-  geom_map(aes(fill = Rape, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) + 
+  geom_map(aes(fill = Rape, map_id = State), 
+           map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
  scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Rape by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Rape by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Rape shows highest prevalence rating over 100 per 100,000 in Alaska. Most other states show middle range rates (between 40 to 90 per 100,000) except for Connecticut and New Jersey, which stand out as the lowest rated states below 20, followed by Georgia and North Carolina in the 20 to 40 range.
 
 ```{r, warning = FALSE, message = FALSE}
 ggplot() + 
-  geom_map(aes(x = long, y = lat, map_id = id), data = fifty_states, map = fifty_states, size = 0.15) +
-  geom_map(aes(fill = Robbery, map_id = State), map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
+  geom_map(aes(x = long, y = lat, map_id = id), 
+           data = fifty_states, map = fifty_states, size = 0.15) +
+  geom_map(aes(fill = Robbery, map_id = State), 
+           map = fifty_states, data = FBICrime, color = "grey40", size = 0.15) + 
   scale_fill_gradient2(name = "Rate Per 100,000", low = "black", mid = "black", high = "#55FFFF") +
-  coord_map() + labs(x = NULL, y = NULL, title = "Rate of Robbery by State, 2017") +
-  theme(axis.ticks = element_blank(), axis.text = element_blank(), panel.background = element_blank(), panel.border = element_blank())
+  coord_map() + 
+  labs(x = NULL, y = NULL, title = "Rate of Robbery by State, 2017") +
+  theme(axis.ticks = element_blank(), axis.text = element_blank(), 
+        panel.background = element_blank(), panel.border = element_blank())
 ```
 
 Robbery is fairly low on its scale throughout the United States with rates below 150 except for states like Nevada, New Mexico, Maryland, and Illinois where you can probably find rates over 200.
@@ -209,11 +256,13 @@ max.crime <- FBICrime %>%
   filter(Rate == max(Rate))
 max.crime
 ```
+
 Here we have the exact minimum and maximum rated states for each criminal offense. The minimums--as we were able to observe from looking at the maps--are mostly in the New England/northeast regions, except for Idaho having the lowest rate of robberies. With maximums--again as seen on the maps--Alaska and New Mexico showed the highest rates for many of the crimes, specifically aggravated assault, burglary, motor vehicle theft, and rape. District of Columbia was not really visible on the map so it is interesting to observe that it shows the highest rates of larceny, murder, and robbery.
 
 ###The relationship between crime and poverty:
 ```{r CrimeVsPoverty, warning = FALSE, message = FALSE}
-dat <- data.frame(Poverty.Rate = CrimePoverty$Poverty.Rate, Average.Crime.Rate = CrimePoverty$Average.Crime.Rate)
+dat <- data.frame(Poverty.Rate = CrimePoverty$Poverty.Rate, 
+                  Average.Crime.Rate = CrimePoverty$Average.Crime.Rate)
 CrimePov.lm <- lm(data = dat, formula = Average.Crime.Rate ~ Poverty.Rate)
 cppi <- cbind(CrimePoverty, predict(CrimePov.lm, interval = "prediction"))
 
@@ -224,7 +273,8 @@ p <- ggplot(cppi, aes(x = Poverty.Rate)) +
   geom_line(aes(x = Poverty.Rate, y = lwr))
 
 p + annotate("text", label = "y = 20.42x + 133.30", x = 10.0, y = 2500, size = 4, color = "blue") + 
-  labs(x = "Rate of Poverty", y = "Average Crime Rate", title = "Average Crime Rate versus Poverty Rate of the United States for 2017")
+  labs(x = "Rate of Poverty", y = "Average Crime Rate", 
+       title = "Average Crime Rate versus Poverty Rate of the United States for 2017")
 ```
 
 ###Correlation coefficient for crime vs. poverty:
@@ -244,7 +294,8 @@ The graph shows a positive relationship between the rate of poverty and average 
 
 ###The relationship between violent and property crime:
 ```{r ViolentVsProperty, warning = FALSE, message = FALSE}
-dat1 <- data.frame(Violent.Crime = FBICrime2$Violent.Crime, Property.Crime = FBICrime2$Property.Crime)
+dat1 <- data.frame(Violent.Crime = FBICrime2$Violent.Crime, 
+                   Property.Crime = FBICrime2$Property.Crime)
 VPCrime.lm <- lm(data = dat1, formula = Property.Crime ~ Violent.Crime)
 cppi1 <- cbind(FBICrime2, predict(VPCrime.lm, interval = "prediction"))
 
@@ -256,7 +307,8 @@ vp <- ggplot(cppi1, aes(x = Violent.Crime)) +
   geom_line(aes(x = Violent.Crime, y = lwr))
 
 vp + annotate("text", label = "y = 2.91x + 1280.94", x = 200, y = 4500, size = 4, color = "blue") + 
-  labs(x = "Violent Crime Rate", y = "Property Crime Rate", title = "Property Crime versus Violent Crime in the United States, 2017")
+  labs(x = "Violent Crime Rate", y = "Property Crime Rate", 
+       title = "Property Crime versus Violent Crime in the United States, 2017")
 
 ```
 
