Final Capstone Project

--- a/Capstone Report.Rmd
+++ b/Capstone Report.Rmd
@@ -4,14 +4,12 @@ author: "Ankita Hanmiah"
 date: "February 7, 2019"
 output:
   pdf_document: default
-  word_document: default
-  html_document: default
 ---
 
 ###Introduction
-The Federal Bureau of Investigation's Uniform Crime Reporting program contains a plethora of data intended to provide information to law enforcement administration and the public on the prevalence of different crimes throughout the United States. Crimes that come to their attention are compiled into four collections of data: national incidents, crimes against law enforcement officials, hate crimes, and general criminal offenses. In this project, the  focus is on general crime: violent and property crime. The intended questions to be answered are: which states are these crimes most prevalent in? Which are the "safest"" states and the most "dangerous"? Is there a relationship between violent and property crime? And does poverty share a relationship with crime?
+The Federal Bureau of Investigation's Uniform Crime Reporting (UCR) program contains a plethora of data intended to provide information to law enforcement administration and the public on the prevalence of different crimes throughout the United States. Crimes that come to their attention are compiled into four collections of data: national incidents, crimes against law enforcement officials, hate crimes, and general criminal offenses. In this project, the  focus is on general crime: violent and property crime. The intended questions to be answered are: which states are these crimes most prevalent in? Which are the "safest"" states and the most "dangerous"? Is there a relationship between violent and property crime? And does poverty share a relationship with crime?
 
-This information would be beneficial for people, probably starting a family, who are looking for a place to put down roots that is safe for their family, or at the very least so that they may be informed and aware of the kind of crime that is most prevalent where they live. This would also be useful for law enforcement and state governments, so that they may be able to more thoroughly understand the current most widespread crime-related, and possibly poverty-related, issues within their jurisdiction. This information could help them build new laws, programs, or make reforms that move towards preventing these kinds of crimes within their state. 
+This information would be beneficial for the general public, specifically people starting a family, who are looking for a place to put down roots that is safe for their family, or at the very least so that people may be informed and aware of the kind of crime that is most prevalent where they live. On a larger scale, this would be useful for law enforcement and state governments, so that they may be able to more thoroughly understand the current most widespread crime-related, and possibly poverty-related, issues within their jurisdiction to find long term solutions.  
 
 ###Data and Data Wrangling
 The original crime data used for this project was collected from Table 4 of the 2017 FBI UCR (FBI Crime Data - State and Region (Original).csv). The FBI compiled 24 tables of data for their offenses, with different breakdowns of regions, states, counties, cities, metropolitan versus non-metropolitan areas, suburban versus non-suburban areas, generalized location of the offenses, weapons used in violent crime, time of day for property crime, and other circumstances. There is additional expanded data on specific crimes as well as clearance data, providing information on how the case was closed: whether or not an arrest was made or if there was another circumstantial close to the case. The table used for this project contained data on the counts and rates of different criminal offenses, as well as counts and rates for violent and property crime, for each state plus the District of Columbia. Violent crime is defined by the FBI as "offenses that involve force or threat of force" and encompasses murder and nonnegligent manslaughter, aggravated assault, rape, and robbery. Property crime is defined as "offenses in which there is no force or threat of force against the victims" and includes burglary, larceny, and motor vehicle theft. The crime dataset being used contains data for 2016 and 2017, though only 2017 will be used for this project to determine what the most current answers are, as this is most beneficial to families and law enforcement looking to make current decisions. 
@@ -290,7 +288,9 @@ CrimePov.SSE <- sum(CrimePov.lm$residuals^2)
 sqrt(CrimePov.SSE/51)
 ```
 
-The graph shows a positive relationship between the rate of poverty and average crime rate in the United States, so as the rate of poverty increases, the average crime rate appears to increase as well. On the graph, a 95% confidence interval and prediction interval are shown. The confidence interval shows the range within which there is a 95% probability that the actual observed average crime rate will be found. The prediction interval shows the estimated range within which it is probable that future predicted average crime rates will be found, based on the actual data observed. The correlation coefficient is a positive 0.510, which indicates that poverty rate and average crime rate have a moderately positive correlation, but it is not close to a perfect positive relationship. The R squared value is 0.2596, which is fairly low, and the root mean squared errors value is 341.518.
+The graph shows a positive relationship between the rate of poverty and average crime rate in the United States, so as the rate of poverty increases, the average crime rate appears to increase as well. The linear regression also shows, with the three stars by the p-value of 'Poverty.Rate', that there is a very strong significance, indicating that there is a relationship between poverty and crime.
+
+On the graph, a 95% confidence interval and prediction interval are shown. The confidence interval shows the range within which there is a 95% probability that the actual observed average crime rate will be found. The prediction interval shows the estimated range within which it is probable that future predicted average crime rates will be found, based on the actual data observed. The correlation coefficient, which indicates the strength of correlation between two variables as a value between -1 (strong negative correlation) and +1 (strong positive correlation), is a positive 0.510. This indicates that poverty rate and average crime rate have a moderately positive correlation, but it is not close to a perfect positive relationship. The R squared value, which indicates relatively how good the fit of the linear model is, of 0.2596 is fairly low. Another value that measures the absolute fit of the model is the root mean squared errors value. Residuals are the difference between the observed and predicted values of the dependent variable. The root mean squared errors value is the square root of the residuals' variance and is in the same units as the dependent variable. The lower the value is, the better the fit. In this case, the RMSE value is 341.518. 
 
 ###The relationship between violent and property crime:
 ```{r ViolentVsProperty, warning = FALSE, message = FALSE}
@@ -325,12 +325,12 @@ VPCrime.SSE <- sum(VPCrime.lm$residuals^2)
 sqrt(VPCrime.SSE/51)
 ```
 
-Again, with violent crime and property crime, we see a positive relationship showing that there does tend to be higher property crime wherever there is higher violent crime. Here the correlation coefficient is 0.7515, which indicates a fairly strong correlation. We see that the relationship is stronger than the one we saw between poverty and average crime. The R squared value is 0.5647 and the root mean squared errors value is 434.227.
+Again, with violent crime and property crime, we see a positive relationship showing that there does tend to be higher property crime wherever there is higher violent crime. The linear regression also shows a very strong significance for the coefficients, indicating a relationship between violent crime and property crime. Here the correlation coefficient is 0.7515, which indicates a fairly strong correlation. We see that the relationship is stronger than the one we saw between poverty and average crime. The R squared value is 0.5647 and the root mean squared errors value is 434.227.
 
 #Conclusion
-Through this project, we were able to look at the distributions of crime throughout the United States on the state level and determine which states could be considered "safer" and which "more dangerous", based on these distributions. For cautious families looking for a safer state to settle down in for the growing years of their children, they may want to veer away from states that currently have higher rates of violent crime. As we saw, there is a high prevalence of both violent and property crime in New Mexico, Alaska, and Washington D.C. For people owning homes and vehicles, it may be of value for them to know that these states, as well as the west coast and south, have a higher spread of property crimes--being aware would allow people to invest in cautious measures of protection, like a home security system. 
+Through this project, we were able to look at the distributions of crime throughout the United States on the state level and determine which states could be considered "safer" and which "more dangerous", based on these distributions. For cautious families looking for a safer state to settle down in for the growing years of their children or just people of the general public wanting to remain informed, they may want to veer away from or be wary of states that currently have higher rates of violent crime. As we saw, there is a high prevalence of both violent and property crime in New Mexico, Alaska, and Washington D.C. For people owning homes and vehicles, it may be of value for them to know that these states, as well as the west coast and south, have a higher spread of property crimes. Being aware of these trends, some actions people can take for themselves, knowing they live in a high property crime area, would be investing in cautious measures of protection, like a home security system, or making sure their cars have anti-theft security features.  
 
-For law enforcement branches and state governments, this project provides information on how their state compares to others, and what their problem areas are. New Mexico showed the highest rate of burglary but also one of the highest for motor vehicle theft, aggravated assault, and larceny. Knowing where the problem specifically lies allows for programs and measures to be put in place. Knowing the relationship between violent and property crime and also crime and poverty allows for an understanding of how best to approach the problems on a larger scale looking forward. Figuring out what drives people to commit crimes is an important part of preventing crimes by not allowing others in similar situations to follow the same path. 
+For law enforcement branches and state governments, this project provides information on how their state compares to others, and what their problem areas are. New Mexico showed the highest rate of burglary but also one of the highest for motor vehicle theft, aggravated assault, and larceny. Knowing where the problem specifically lies means programs, new laws, and reforms can be put in place. The relationship between violent and property crime and also crime and poverty allows for an understanding of how best to approach the problems on a larger scale looking forward. Figuring out what drives people to commit crimes is an important part of preventing crimes by not allowing others in similar situations to follow the same path. A recommendation here would be to build mentoring programs for children of impoverished families, with the initiative of making sure these children take part in educational opportunities and later on career opportunities available to them. In a program as such, it would be important to look out for dangerous behaviors and try to counsel with the children and give them the extra attention needed to prevent them from turning to crime. Another recommendation would be for law enforcement of states/areas (such as New Mexico, District of Columbia, and Alaska) with higher crime rates to invest in more surveillance, whether that means CCTV cameras or having more patrolling officers keeping an eye and having their presence felt in heavily affected areas. 
 
 ###Possibilities for Further Investigation
 It would be interesting to delve deeper into the data provided by the FBI and look further into the crime rates within the states to observe metropolitan versus non-metropolitan crime and poverty. Since there is some positive correlation on an overall state scale between crime rates and poverty, it would be interesting to look at whether or not this continues to show at a county or city level. Are the poverty rates higher in urban areas or rural? And do higher rates of crime follow wherever higher poverty rates are found within these specifically defined areas? 
